--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1:3306/ws?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/wss?characterEncoding=utf8&useSSL=false
     username: root
     password: Yun123
     driver-class-name: com.mysql.cj.jdbc.Driver
