--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1:3306/im?characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/wss?characterEncoding=utf8&useSSL=false
     username: root
     password: Yun!666666
     driver-class-name: com.mysql.jdbc.Driver
